--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .btn{
+        @apply bg-green-500 leading-8 active:text-green-500 rounded ring-2 ring-slate-900 bg-slate-300
+    }
+    
+}
